k8s/service-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-api
  template:
    metadata:
      labels:
        app: service-api
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - name: service-api
        image: docker.io/library/alfr3d-service-api:v0.2.0
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
        ports:
        - containerPort: 5001
        volumeMounts:
        - name: audio-storage
          mountPath: /tmp/audio
      volumes:
      - name: audio-storage
        emptyDir: {}
