k8s/service-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-frontend
  template:
    metadata:
      labels:
        app: service-frontend
    spec:
       securityContext:
         runAsNonRoot: true
         runAsUser: 1001
         runAsGroup: 1001
       containers:
       - name: service-frontend
         image: alfr3d/service-frontend:v0.2.0
         imagePullPolicy: Never
         securityContext:
           allowPrivilegeEscalation: false
           readOnlyRootFilesystem: true
           capabilities:
             drop: ["ALL"]
         ports:
         - containerPort: 8000
