k8s/service-user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-user
  template:
    metadata:
      labels:
        app: service-user
    spec:
       securityContext:
         runAsNonRoot: true
         runAsUser: 1000
         runAsGroup: 1000
       containers:
       - name: service-user
         image: alfr3d/service-user:v0.2.0
         imagePullPolicy: Never
         securityContext:
           allowPrivilegeEscalation: false
           readOnlyRootFilesystem: true
           capabilities:
             drop: ["ALL"]
