k8s/service-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-api
spec:
  selector:
    app: service-api
  ports:
  - port: 5001
    targetPort: 5001
  type: ClusterIP
