k8s/service-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-frontend
spec:
  selector:
    app: service-frontend
  ports:
  - port: 8000
    targetPort: 8000
  type: LoadBalancer
