k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alfr3d-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: service-api
            port:
              number: 5001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-frontend
            port:
              number: 8000
